# BerryEval

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  wheels.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-core-infrastructure/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/05-performance-acceleration/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmarks/: __init__.py  conftest.py  test_bench_metrics.py
berryeval/: __init__.py
berryeval/cli/: __init__.py  _app.py  _output.py  compare.py  evaluate.py  generate.py  inspect_cmd.py  version.py
berryeval/comparison/: __init__.py  engine.py  thresholds.py  types.py
berryeval/config/: __init__.py  eval_config.py  types.py
berryeval/dataset/: __init__.py  chunker.py  generator.py  hasher.py  reader.py  writer.py
berryeval/metrics/: __init__.py  _native.py  _python.py  _types.py  _validation.py
berryeval/persistence/: __init__.py  results.py  types.py
berryeval/retrievers/: __init__.py  base.py  pinecone_adapter.py
berryeval/runner/: __init__.py  evaluator.py  latency.py
native/: CMakeLists.txt
native/bindings/: module.c
native/src/: metrics.c  metrics.h
results/: berryeval_run_20260101_000000_test-uui.json
tests/: conftest.py
tests/cli/: test_compare.py  test_evaluate.py  test_inspect.py
tests/comparison/: test_engine.py  test_thresholds.py
tests/config/: test_eval_config.py
tests/dataset/: test_chunker.py  test_generator.py  test_hasher.py  test_writer.py
tests/metrics/: test_hit_rate.py  test_mrr.py  test_ndcg.py  test_precision.py  test_recall.py  test_validation.py
tests/persistence/: test_results.py
tests/retrievers/: __init__.py  test_base.py  test_pinecone.py
tests/runner/: test_evaluator.py  test_latency.py
