[build-system]
requires = ["setuptools>=75.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "berryeval"
version = "0.1.0"
description = "Open-source evaluation framework for benchmarking RAG retrieval quality"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.0",
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
    "openai>=1.60.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pinecone = ["pinecone-client>=3.0"]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-benchmark>=5.0",
]

[project.scripts]
berryeval = "berryeval.cli:app"

[tool.setuptools.packages.find]
include = ["berryeval*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["berryeval"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["yaml", "pinecone"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
test-requires = ["pytest>=8.0"]
test-command = "pytest {project}/tests/metrics/ -v"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
